syntax = "proto3";
package wire;

message Consensus {
    oneof payload {
        Proposal proposal = 1;
        Vote vote = 2;
        Notarization notarization = 3;
        Finalize finalize = 4;  
        Finalization finalization = 5;
    }
}

message Proposal {
    uint64 view = 1;
    uint64 height = 2;
    bytes parent = 3;
    bytes payload = 4;

    Signature signature = 5;
}

message Vote {
    uint64 view = 1;
    optional uint64 height = 2;
    optional bytes hash = 3; 

    Signature signature = 4;
}

message Notarization {
    uint64 view = 1;
    optional uint64 height = 2;
    optional bytes hash = 3;
    
    repeated Signature signatures = 4;
}

message Finalize {
    uint64 view = 1;
    uint64 height = 2;
    bytes hash = 3;

    Signature signature = 4;
}

message Finalization {
    uint64 view = 1;
    uint64 height = 2;
    bytes hash = 3;

    repeated Signature signatures = 4;
}

message Signature {
    bytes public_key = 1;
    bytes signature = 2;
}

message Backfill {
    oneof payload {
        Request request = 1;
        Resolution resolution = 2;
        Missing missing = 3;
    }
}
message Request {
    bytes hash = 1;
    uint64 parents = 2;
}

message Resolution {
    repeated Proposal proposals = 1;
}

message Missing {
    bytes hash = 1;
}

// TODO: only store one fault per public key per view to avoid DoS
message Fault {
    uint64 view = 1;
    bytes public_key = 2;

    oneof payload {
        ConflictingProposal conflicting_proposal = 3;
        ConflictingVote conflicting_vote = 4;
        ConflictingFinalize conflicting_finalize = 5;
        NullFinalize null_finalize = 6;
    }
}

message ConflictingProposal {
    bytes header_hash_1 = 1;
    bytes payload_hash_1 = 2;
    bytes signature_1 = 3;

    bytes header_hash_2 = 4;
    bytes payload_hash_2 = 5;
    bytes signature_2 = 6;
}

message ConflictingVote {
    uint64 height_1 = 1;
    bytes hash_1 = 2;
    bytes signature_1 = 3;

    uint64 height_2 = 4;
    bytes hash_2 = 5;
    bytes signature_2 = 6;
}

message ConflictingFinalize {
    uint64 height_1 = 1;
    bytes hash_1 = 2;
    bytes signature_1 = 3;

    uint64 height_2 = 4;
    bytes hash_2 = 5;
    bytes signature_2 = 6;
}

message NullFinalize {
    uint64 height = 1;
    bytes hash = 2;
    bytes signature_finalize = 3;

    bytes signature_null = 4;
}